# inspectah

./: .gitignore  .inspectah-session-fleet-fleet-20260526-124309.json  .inspectah-session-fleet-fleet-20260526-140636.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE-NOTES-v0.8.0-alpha.4.md  ROADMAP.md  run-inspectah.sh
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: baseline_requirement_test.rs  refine_e2e_test.rs
crates/collect/: Cargo.toml
crates/collect/tests/: baseline_test.rs  config_test.rs  containers_test.rs  kernelboot_test.rs  network_test.rs  nonrpm_test.rs  parity_test.rs  repoless_rpm_test.rs  rpm_equivalence.rs  scheduled_test.rs  selinux_test.rs  services_test.rs  storage_test.rs  unmanaged_scan_test.rs  users_test.rs
crates/core/: Cargo.toml
crates/core/src/: baseline.rs  lib.rs  pipeline.rs  redaction.rs  snapshot.rs  util.rs
crates/core/tests/: aggregate_e2e_test.rs  aggregate_merge_test.rs  aggregate_orchestrator_test.rs  aggregate_validate_test.rs  aggregate_zone_test.rs  fleet_merge_test.rs  fleet_orchestrator_test.rs  fleet_zone_test.rs  subscription_integration_test.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  keys.rs  lib.rs  test_helpers.rs
crates/web/: Cargo.toml
crates/web/src/: adapter.rs  aggregate_handlers.rs  error.rs  fleet_handlers.rs  handlers.rs  lib.rs  upload.rs  web_types.rs
crates/web/tests/: aggregate_api_test.rs  api_test.rs  contract_snapshots.rs  fixture_structure_test.rs  fleet_api_test.rs
crates/web/ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
inspectah-cli/: Cargo.toml
inspectah-cli/src/: main.rs
inspectah-cli/src/commands/: build.rs  fleet.rs  mod.rs  pull_progress.rs  refine.rs  scan.rs  version.rs
inspectah-cli/src/progress/: display.rs  flat.rs  mod.rs  plain.rs  rich.rs
inspectah-cli/tests/: refine_e2e_test.rs
inspectah-collect/: Cargo.toml  build.rs
inspectah-collect/src/: baseline.rs  lib.rs
inspectah-collect/src/executor/: mock.rs  mod.rs  real.rs
inspectah-collect/src/ffi/: mod.rs  rpm.rs
inspectah-collect/src/inspectors/: containers.rs  kernelboot.rs  mod.rs  network.rs  nonrpm.rs  scheduled.rs  selinux.rs  services.rs  storage.rs  subscription.rs  users.rs
inspectah-collect/tests/: baseline_test.rs  config_test.rs  containers_test.rs  executor_boundary_test.rs  ffi_rpm.rs  kernelboot_test.rs  network_test.rs  nonrpm_test.rs  parity_test.rs  rpm_equivalence.rs  scheduled_test.rs  selinux_test.rs  services_test.rs  storage_test.rs  users_test.rs
inspectah-collect/tests/snapshots/: kernelboot_test__kernelboot_snapshot.snap  kernelboot_test__kernelboot_snapshot.snap.new  services_test__services_snapshot.snap  storage_test__storage_snapshot.snap
inspectah-core/: Cargo.toml
inspectah-core/src/: baseline.rs  lib.rs  normalize.rs  pipeline.rs  snapshot.rs
inspectah-core/src/fleet/: merge.rs  mod.rs  validate.rs
inspectah-core/src/traits/: detector.rs  executor.rs  inspector.rs  mod.rs
inspectah-core/src/types/: completeness.rs  config.rs  containers.rs  fleet.rs  kernelboot.rs  mod.rs  network.rs  nonrpm.rs  os.rs  preflight.rs  progress.rs  redaction.rs  repo.rs  rpm.rs  scheduled.rs  selinux.rs  services.rs  storage.rs  system.rs  users.rs  warnings.rs
inspectah-core/tests/: fleet_e2e_test.rs  fleet_merge_test.rs  fleet_orchestrator_test.rs  fleet_validate_test.rs  fleet_zone_test.rs  parity_gate.rs
inspectah-pipeline/: Cargo.toml
inspectah-pipeline/assets/: patternfly.min.css  report.css  report.js
inspectah-pipeline/src/: collect.rs  lib.rs  orchestrate.rs  validate.rs
inspectah-pipeline/src/redaction/: engine.rs  mod.rs  patterns.rs
inspectah-pipeline/src/render/: audit.rs  baseline_fmt.rs  configtree.rs  containerfile.rs  kickstart.rs  mod.rs  readme.rs  report.rs  report_data.rs  safety.rs  secrets.rs  service_intent.rs  tarball.rs  users.rs
inspectah-pipeline/templates/report/: base.html  baseline.html  completeness.html  config.html  fleet-summary.html  header.html  incomplete.html  packages.html  redactions.html  source-info.html  storage.html  toc.html  users.html
inspectah-pipeline/tests/: build_subscription_test.rs  e2e.rs  failure_policy.rs  failure_policy_2b.rs  parallel_test.rs  redaction_2b_surfaces_test.rs  redaction_2c_surfaces_test.rs  redaction_new_surfaces_test.rs  service_intent_test.rs  smoke_render.rs  smoke_render_2b.rs  smoke_render_2c.rs  users_render_test.rs
inspectah-refine/: Cargo.toml
inspectah-refine/src/: attention.rs  autosave.rs  baseline_summary.rs  classify.rs  lib.rs  normalize.rs  repo_index.rs  session.rs  tarball.rs  types.rs
inspectah-refine/src/fleet/: attention.rs  classify.rs  diff.rs  mod.rs  variant_ops.rs
inspectah-refine/src/projection/: decisions.rs  mod.rs  reference.rs  types.rs
inspectah-refine/tests/: attention_test.rs  autosave_integration_test.rs  autosave_test.rs  cross_crate_integration_test.rs  export_contract_test.rs  fleet_attention_test.rs  fleet_diff_test.rs  fleet_e2e_test.rs  fleet_export_test.rs  fleet_session_test.rs  fleet_types_test.rs  fleet_variant_ops_test.rs  normalize_test.rs  phase6_integration_test.rs  repo_index_test.rs  serde_test.rs  session_test.rs  source_repo_gate_test.rs  tarball_test.rs  types_test.rs  users_integration_test.rs
inspectah-tui/: Cargo.toml
inspectah-tui/src/: action.rs  app.rs  lib.rs  sections.rs  theme.rs  types.rs
inspectah-tui/src/screen/: single_host.rs
inspectah-tui/src/widget/: containerfile.rs  detail_view.rs  help_screen.rs  mod.rs  search.rs  section_nav.rs  triage_list.rs  user_strategy.rs
inspectah-web/: Cargo.toml  build.rs
inspectah-web/src/: adapter.rs  assets.rs  error.rs  fleet_handlers.rs  handlers.rs  lib.rs  web_types.rs
inspectah-web/static/: index.html
inspectah-web/tests/: api_test.rs  contract_snapshots.rs  fixture_structure_test.rs  fleet_api_test.rs
inspectah-web/tests/snapshots/: contract_snapshots__contract_view.snap  (+14 more)
inspectah-web/ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+912 files in other folders)
