[workspace]
members = [
    "inspectah-core",
    "inspectah-collect",
    "inspectah-pipeline",
    "inspectah-cli",
    "inspectah-web",
    "inspectah-refine",
    "inspectah-tui",
]
resolver = "2"

[workspace.package]
version = "0.8.5-beta.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/marrusl/inspectah"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
insta = { version = "1", features = ["json"] }
tempfile = "3"
