[workspace]
members = [
    "crates/core",
    "crates/collect",
    "crates/pipeline",
    "crates/cli",
    "crates/web",
    "crates/refine",
    "crates/tui",
]
resolver = "2"

[workspace.package]
version = "0.8.6-beta.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/marrusl/inspectah"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
insta = { version = "1", features = ["json"] }
tempfile = "3"
