[package]
name = "inspectah-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../inspectah-core" }
inspectah-collect = { path = "../inspectah-collect" }
inspectah-pipeline = { path = "../inspectah-pipeline" }
inspectah-web = { path = "../inspectah-web" }
inspectah-refine = { path = "../inspectah-refine" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
open = "5"

[[bin]]
name = "inspectah"
path = "src/main.rs"
