[package]
name = "inspectah-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../inspectah-core" }
inspectah-collect = { path = "../inspectah-collect" }
inspectah-pipeline = { path = "../inspectah-pipeline" }
inspectah-web = { path = "../inspectah-web" }
inspectah-refine = { path = "../inspectah-refine" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
tempfile = "3"
terminal_size = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
open = "5"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
inspectah-refine = { path = "../inspectah-refine" }
inspectah-web = { path = "../inspectah-web" }
serde_json = "1"
tempfile = "3"
tar = "0.4"
flate2 = "1"

[[bin]]
name = "inspectah"
path = "src/main.rs"
