[package]
name = "inspectah-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../inspectah-core" }
inspectah-collect = { path = "../inspectah-collect" }
inspectah-pipeline = { path = "../inspectah-pipeline" }
inspectah-web = { path = "../inspectah-web" }
inspectah-refine = { path = "../inspectah-refine" }
inspectah-tui = { path = "../inspectah-tui" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
libc = "0.2"
tempfile = "3"
terminal_size = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
open = "5"
tar = "0.4"
flate2 = "1"
pathdiff = "0.2"
sha2 = "0.11.0"
ctrlc = "3"
clap-markdown = "0.1.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
inspectah-refine = { path = "../inspectah-refine" }
inspectah-web = { path = "../inspectah-web" }
serde_json = "1"
tempfile = "3"
tar = "0.4"
flate2 = "1"

[[bin]]
name = "inspectah"
path = "src/main.rs"
