[package]
name = "inspectah-collect"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ffi-rpm = ["dep:libc"]

[dependencies]
inspectah-core = { path = "../inspectah-core" }
serde.workspace = true
serde_json.workspace = true
libc = { version = "0.2", optional = true }
regex = "1"
wait-timeout = "0.2"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
