[package]
name = "inspectah-collect"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ffi-rpm = []

[dependencies]
inspectah-core = { path = "../inspectah-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc = "0.2"
regex = "1"
wait-timeout = "0.2"

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
