[package]
name = "inspectah-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
toml = "0.8"

[dev-dependencies]
insta.workspace = true
tempfile = "3.10"
