[package]
name = "inspectah-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../inspectah-core" }
inspectah-collect = { path = "../inspectah-collect" }
regex = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tar = "0.4"
flate2 = "1"
walkdir = "2"
chrono = "0.4"
base64 = "0.22"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
