[package]
name = "inspectah-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../inspectah-core" }
inspectah-collect = { path = "../inspectah-collect" }
regex = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = "1"
tar = "0.4"
flate2 = "1"
walkdir = "2"
chrono = "0.4"
base64 = "0.22"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
tempfile = "3"
minijinja = { version = "2", features = ["builtins"] }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
