[package]
name = "inspectah-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-refine = { path = "../inspectah-refine" }
inspectah-core = { path = "../inspectah-core" }
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
tui-input = "0.11"
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
inspectah-refine = { path = "../inspectah-refine" }
