[package]
name = "inspectah-web"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
inspectah-core = { path = "../inspectah-core" }
inspectah-pipeline = { path = "../inspectah-pipeline" }
inspectah-refine = { path = "../inspectah-refine" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
