[package]
name = "inspectah-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../core" }
inspectah-collect = { path = "../collect" }
inspectah-pipeline = { path = "../pipeline" }
inspectah-web = { path = "../web" }
inspectah-refine = { path = "../refine" }
inspectah-tui = { path = "../tui" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
libc = "0.2"
tempfile = "3"
terminal_size = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
open = "5"
tar = "0.4"
flate2 = "1"
pathdiff = "0.2"
ctrlc = "3"
clap-markdown = "0.1.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
inspectah-refine = { path = "../refine" }
inspectah-web = { path = "../web" }
serde_json = "1"
tempfile = "3"
tar = "0.4"
flate2 = "1"
insta.workspace = true
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "inspectah"
path = "src/main.rs"
