[package]
name = "inspectah-collect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc = "0.2"
regex = "1"
wait-timeout = "0.2"
x509-parser = "0.16"
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
