[package]
name = "inspectah-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inspectah-refine = { path = "../refine" }
inspectah-core = { path = "../core" }
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
insta = { workspace = true }
