[package]
name = "inspectah-web"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
inspectah-core = { path = "../core" }
inspectah-pipeline = { path = "../pipeline" }
inspectah-refine = { path = "../refine" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
tempfile.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
insta = { workspace = true }
